--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-build-control": "~0.1.2",
     "grunt-concurrent": "~0.3.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
@@ -17,7 +18,7 @@
     "grunt-contrib-watch": "~0.5.2",
     "grunt-csscss": "~0.5.0",
     "grunt-jekyll": "git://github.com/dannygarcia/grunt-jekyll.git#aa03074ee0f5b69dc9d7a0e6ced6bb8cd923add6",
-    "grunt-rev": "~0.1.0",
+    "grunt-replace": "~0.5.1",
     "grunt-sass": "~0.17.0",
     "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~0.1.12",
@@ -25,6 +26,6 @@
     "time-grunt": "~0.1.1"
   },
   "engines": {
-    "node": ">=0.8.0"
+    "node": "0.10.33"
   }
 }
